--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,6 +8,18 @@
 <br>
 <div class="row">
     <div class="container">
+
+        <!--div class="col-sm-12">
+            <%= form_for_filterrific @filterrific do |f| %>
+                <div class="form-group">
+                    <div class="input-group">
+                        <%= f.text_field :search_query, autofocus: true, :class => "form-control validate", :placeholder => "Buscar Proyecto" %>
+                        <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                    </div>        
+                </div>
+            <% end %>
+        </div-->
+
         <% @projects.each do |p| %>
             <%= link_to project_path(p) do %>
             <div class="col-sm-4 col-md-4">
