--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -22,7 +22,7 @@
             </div>
   
             <div class="form-group">
-              <%= select_tag :department, options_for_select([['Departamento', 'departmento'], ['Desarrollo', 'desarrollo'], ['Finanzas', 'finanzas'], ['Administración', 'administracion'], ['Soporte', 'soporte']], 'departamento'), :class => "form-control" %>
+              <%= select_tag :department, options_for_select([['Departamento', 'departmento'], ['Desarrollo', 'desarrollo'],['Diseño', 'diseño'], ['Finanzas', 'finanzas'], ['Administración', 'administracion'], ['Soporte', 'soporte']], 'departamento'), :class => "form-control" %>
             </div>
   
             <div class="form-group">
