--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -134,6 +134,10 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fec503;
 }
 
+.filterrific_results{
+  padding-top: 30px;
+}
+
 .btn-xl {
   padding: 20px 40px;
   border-color: #fff;
