--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -26,7 +26,7 @@
           </div>
 
           <div class="form-group">
-            <%= select_tag :commitment, options_for_select([['Tipo de Trabajo', 'tipo'], ['Tiempo Completo', 'completo'], ['Medio Tiempo', 'medio'], ['Remoto', 'remoto'], ['Consultoría', 'consultor']], 'tipo'), :class => "form-control" %>
+            <%= select_tag :commitment, options_for_select([['Tipo de Trabajo', 'tipo'], ['Tiempo Completo', 'completo'], ['Medio Tiempo', 'medio'], ['Remoto / Freelance', 'freelance'], ['Consultoría', 'consultor']], 'tipo'), :class => "form-control" %>
           </div>
 
           <div class="form-group">
