Added salary to job#show, job#index

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -22,6 +22,7 @@
                 <%= link_to job_path(aj) do %> 
                   <h3><%= aj.position %> </h3>
                 <% end %>
+                <h5><u><%= aj.salary %></u> MXN</h5>
                 <h6><%= aj.location%> | <%= aj.department %> | <%= aj.commitment %></h6>
                 <% if user_signed_in? %>
                   <% if current_user.username == "oschvr" %>
@@ -40,6 +41,7 @@
                 <%= link_to job_path(fj) do %> 
                   <h3><%= fj.position %> </h3>
                 <% end %>
+                <h5><u><%= fj.salary %></u> MXN</h5>
                 <h6><%= fj.location%> | <%= fj.department %> | <%= fj.commitment %></h6>
                 <% if user_signed_in? %>
                   <% if current_user.username == "oschvr" %>
@@ -58,7 +60,7 @@
                 <%= link_to job_path(dj) do %> 
                   <h3><%= dj.position %> </h3>
                 <% end %>
-                <h5><u><%= dj.salary %></u></h5>
+                <h5><u><%= dj.salary %></u> MXN</h5>
                 <h6><%= dj.location%> | <%= dj.department %> | <%= dj.commitment %></h6>
                 <% if user_signed_in? %>
                   <% if current_user.username == "oschvr" %>
@@ -77,6 +79,7 @@
                 <%= link_to job_path(dej) do %> 
                   <h3><%= dej.position %> </h3>
                 <% end %>
+                <h5><u><%= dej.salary %></u> MXN</h5>
                 <h6><%= dej.location%> | <%= dej.department %> | <%= dej.commitment %></h6>
                 <% if user_signed_in? %>
                   <% if current_user.username == "oschvr" %>
@@ -95,6 +98,7 @@
                 <%= link_to job_path(sj) do %> 
                   <h3><%= sj.position %> </h3>
                 <% end %>
+                <h5><u><%= sj.salary %></u> MXN</h5>
                 <h6><%= sj.location%> | <%= sj.department %> | <%= sj.commitment %></h6>
                 <% if user_signed_in? %>
                   <% if current_user.username == "oschvr" %>
