--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -50,9 +50,8 @@
       </ul>
 		</div>
   </div>  
-  </br></br>
-  <div class="row text-center">
-    <!--Gustavo L'Eglise-->
+  <!--Gustavo L'Eglise-->
+  <!--div class="row text-center">
     <div class="col-sm-6 col-md-6">
       <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
       <h3>Gustavo L'Eglise</h3>
@@ -62,13 +61,11 @@
       <ul class="list-inline social-buttons">
         <li><a href="https://www.linkedin.com/in/gustavoleglise" target="_blank"><i class="fa fa-linkedin"></i></a>
         </li>
-        <!--li><a href="https://github.com/GustavoLeglise" target="_blank"><i class="fa fa-github"></i></a>
-        </li-->
       </ul>
-    </div>
+    </div-->
 
 		<!--Roberto Ramos-->
-		<div class="col-sm-6 col-md-6">
+		<!--div class="col-sm-6 col-md-6">
 			<%= image_tag "company/bob.png", :class => "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Roberto Ramos</h3>
       <h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
@@ -83,7 +80,7 @@
 		</div>
 
 
-  </div>
+  </div-->
   <br><br>
   <div class="row text-center">
     <!--Rodrigo Hijar-->
