Change company members profile

--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -52,6 +52,33 @@
   </div>  
   </br></br>
   <div class="row text-center">
+    <!--Rodrigo Hijar-->
+		<div class="col-sm-6 col-md-6">
+			<%= image_tag "company/rhijar.jpg", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+			<h3>Rodrigo Hijar</h3>
+			<h5>Business Development Advisor</h5>
+      <p>Commercial strategy & profitable growth.</p>
+			<ul class="list-inline social-buttons">
+        <!--li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li-->
+        <li><a href="http://twitter.com/RodrigoHijar" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigo-hijar-35527559/"><i class="fa fa-linkedin"></i></a></li>
+      </ul>
+		</div>
+		
+    <!--Rodrigo Llanos-->
+		<div class="col-sm-6 col-md-6">
+			<%= image_tag "company/rllanos.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
+			<h3>Rodrigo Llanos</h3>
+			<h5>Investment Management Advisor</h5>
+      <p>Corporate finance & Regulatory.</p>
+			<ul class="list-inline social-buttons">
+        <li><a href="https://twitter.com/rodrigollanosb" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigollanosb/"><i class="fa fa-linkedin"></i></a></li>
+      </ul>
+		</div>
+	</div>
+  <br><br>
+  <div class="row text-center">
     <!--Gustavo L'Eglise-->
     <div class="col-sm-6 col-md-6">
       <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
@@ -68,7 +95,7 @@
     </div>
 
 		<!--Roberto Ramos-->
-		<div class="col-sm-6 col-md-6">
+		<!--div class="col-sm-6 col-md-6">
 			<%= image_tag "company/bob.png", :class => "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Roberto Ramos</h3>
       <h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
@@ -80,41 +107,7 @@
         <li><a href="https://github.com/broyson" target="_blank"><i class="fa fa-github"></i></a>
         </li>
       </ul>
-		</div>
-
-
-  </div>
-  <br><br>
-  <div class="row text-center">
-    <!--Rodrigo Hijar-->
-		<div class="col-sm-6 col-md-6">
-			<%= image_tag "company/rhijar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
-			<h3>Rodrigo Hijar</h3>
-			<h5>Business Consultant & Manager</h5>
-      <p>Client segmentation. Go-to-market and commercial strategy.</p>
-      <p>Expansion. Growth</p>
-			<ul class="list-inline social-buttons">
-        <!--li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li-->
-        <li><a href="http://twitter.com/RodrigoHijar" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/rodrigo-hijar-35527559/"><i class="fa fa-linkedin"></i></a></li>
-      </ul>
-		</div>
-		
-    <!--Rodrigo Llanos-->
-		<div class="col-sm-6 col-md-6">
-			<%= image_tag "company/rllanos.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
-			<h3>Rodrigo Llanos</h3>
-			<h5>Finance Consultant & Manager</h5>
-      <p>Financial Projections. Risk Assesment.</p>
-      <p>Compliance. Regulations.</p>
-			<ul class="list-inline social-buttons">
-        <li><a href="https://twitter.com/rodrigollanosb" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/rodrigollanosb/"><i class="fa fa-linkedin"></i></a></li>
-      </ul>
-		</div>
-	</div>
-  <br><br>
-  <div class="row text-center">
+		</div-->
     <!--Rodrigo Moreno-->
     <!--div class="col-sm-6 col-md-6">
       <%= image_tag "company/rodrigo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
